git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@701 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities.html.haml
+++ b/app/views/relations/entities.html.haml
@@ -2,4 +2,6 @@
 
 =render :partial=>'entities_search'
 
+.aclist
+  =link_to tc('entities_create'), {:action=>:entities_create}, :class=>'procedure create'
 =dyta :entities
