--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -1,5 +1,6 @@
 = aclist do |l|
   - l.action :entities_update, :id=>@entity.id
+  - l.action :entities_print, :id=>@entity.id
 
 <!-- =itemize(:entity) do |t| -->
 <!--   -t.item :name -->
