git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@712 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/products_display.html.haml
+++ b/app/views/management/products_display.html.haml
@@ -22,8 +22,11 @@
       =evalue @product, :description
       =evalue @product, :comment
     %td
-      =#evalue @product, :without_stocks
       =evalue @product, :manage_stocks
+- if @product_stocks.size > 0
+  %h2= tc('stocks')
+  .stocks 
+    =render :partial=>"stock_indicator"
 
 -if @product.to_sale or @product.to_purchase
   %h2=tc :prices
