git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@713 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -1,4 +1,4 @@
-#login
+#login.login{'style'=>'display:none'}
   .logoban
   - form_tag do
     %table
@@ -14,6 +14,11 @@
     -unless defined?(Ekylibre::DONT_REGISTER)
       =link_to tc(:register), :action=>:register
     =link_to tc(:download_firefox), "http://www.mozilla-europe.org/fr/firefox/"
+#nojavascript.login
+  .logoban
+  .message=tc('no_javascript')
 :javascript
   $('user_name').select();
   $('user_name').focus(); 
+  $('nojavascript').hide();
+  $('login').show();
