git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@719 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities.html.haml
+++ b/app/views/relations/entities.html.haml
@@ -3,5 +3,7 @@
 =render :partial=>'entities_search'
 
 .aclist
-  =link_to tc('entities_create'), {:action=>:entities_create}, :class=>'procedure create'
+  %ul
+    %li=link_to tc('entities_create'), {:action=>:entities_create}, :class=>'procedure create'
+    %li=link_to tc('entities_export'), {:action=>:entities_export}
 =dyta :entities
