--- a/app/views/accountancy/journals_close.html.haml
+++ b/app/views/accountancy/journals_close.html.haml
@@ -2,8 +2,8 @@
   =formalize do |f|
     - f.error :journal
     - f.field :journal, :id, :choices => @journals.collect {|j| [j.name, j.id]}
-    - f.field :journal, :closed_on, :choices => @journal_periods
+    - f.field :journal, :closed_on, :choices => @journal_records
   .actions
     =submit_tag(tc('close'))
     =link_to_back
-=observe_field "journal_id", :frequency => 0.25, :url=>{:action=>:journals_periods}, :update=>:journal_closed_on, :with => "'journal_select=' + escape(value)"
+=observe_field "journal_id", :frequency => 0.25, :url=>{:action=>:journals_records}, :update=>:journal_closed_on, :with => "'journal_select=' + escape(value)"
