--- a/app/views/accountancy/financialyears_close.html.haml
+++ b/app/views/accountancy/financialyears_close.html.haml
@@ -3,8 +3,22 @@
     - f.error :financialyear
     - f.field :financialyear, :id, :choices => @financialyears.collect {|y| [y.code, y.id]}
     - f.field :financialyear, :stopped_on, :choices => @financialyear_periods
+    - f.field tc(:save_renew), {:datatype=>:radio, :choices=>choices_yes_no} 
+    /- f.field tc(:select_renew_journal), select_tag(:renew, options_for_select(@renew_journal.collect{|j| [j.name.to_s, j.id.to_s]})) 
+    - f.field tc(:select_renew_journal), {:datatype=>:choice, :choices=>@renew_journal.collect{|j| [j.name.to_s, j.id.to_s]} }, :options => {:include_blank=>"rien"}  
   .actions
     =submit_tag(tc('close'))
     =link_to_back
-=observe_field "financialyear_id", :frequency => 0.25, :url=>{:action=>:financialyears_periods}, :update=>:financialyear_stopped_on, :with => "'financialyear_select=' + escape(value)"
+=observe_field "financialyear_id", :frequency => 0.25, :url=>{:action=>:financialyears_records}, :update=>:financialyear_stopped_on, :with => "'financialyear_select=' + escape(value)"
+=observe_field "radio_true", :frequency => 0.25, :function =>"banToggleTrue(element)"
 
+:javascript
+  function banToggleTrue(element) {
+    if (element.checked) { 
+      $(tc(:renew)).show();
+    } else { 
+      $(tc(:renew)).hide();
+    }
+  }
+  $('radio_false').checked = "checked"
+  $(tc(:renew)).hide();
