git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@732 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/products_display.html.haml
+++ b/app/views/management/products_display.html.haml
@@ -17,8 +17,8 @@
       =evalue @product, :active
     %td
       =evalue @product, :to if @product.to_sale or @product.to_purchase
-      =evalue @product, :catalog_name
-      =evalue @product, :catalog_description
+      =#evalue @product, :catalog_name
+      =#evalue @product, :catalog_description
       =evalue @product, :description
       =evalue @product, :comment
     %td
