git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@733 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities.html.haml
+++ b/app/views/relations/entities.html.haml
@@ -6,4 +6,6 @@
   %ul
     %li=link_to tc('entities_create'), {:action=>:entities_create}, :class=>'procedure create'
     %li=link_to tc('entities_export'), {:action=>:entities_export}
+    %li=link_to tc('entities_import'), {:action=>:entities_import}
 =dyta :entities
+   
