git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@741 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_users_form.html.haml
+++ b/app/views/company/_users_form.html.haml
@@ -8,3 +8,5 @@
   -f.field :user, :password
   -f.field :user, :password_confirmation
   -f.field :user, :role_id, :choices=>@current_company.roles.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
+  -f.field :user, :reduction_percent
+  -f.field :user, :free_price
