--- a/app/views/relations/entities_import.html.haml
+++ b/app/views/relations/entities_import.html.haml
@@ -10,7 +10,7 @@
 %h2=tc('file_to_download')
 -form_tag({}, :multipart=>true) do
   =file_field(:csv_file, :path)
-  =submit_tag('ok',:action=>:import_entities) 
+  =submit_tag('ok',:action=>:entities_import) 
 
 %h2{:style=>'padding:5px;'}=tc('defined_columns')
 %ol{:style=>'text-align:left; padding: 0px 50px; '}
