--- a/app/views/management/prices.html.haml
+++ b/app/views/management/prices.html.haml
@@ -9,6 +9,9 @@
           =select(:price, :supply, @suppliers.collect{|x| [x.full_name,x.id]})
           =submit_tag tg('filter')
 .aclist
-  = link_to tc('sales_prices_create'), :action=>:prices_create, :mode=>:sales, :class=>'procedure create'
-  = link_to tc('purchases_prices_create'), :action=>:prices_create, :mode=>:purchases, :class=>'procedure create'
+  %ul
+    %li= link_to tc('sales_prices_create'), {:action=>:prices_create, :mode=>:sales}, :class=>'procedure create'
+    %li= link_to tc('purchases_prices_create'), {:action=>:prices_create, :mode=>:purchases}, :class=>'procedure create'
+    %li= link_to tc('prices_export'), {:action=>:prices_export}
+    %li= link_to tc('prices_import'), {:action=>:prices_import}
 =dyta :prices
