--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -22,11 +22,11 @@
 
 =formalize(:id=>:supplier_form) do |f|
   - f.title :supplier
-  - f.field :entity, :supplier_account_id, :choices=>@current_company.accounts.find(:all, :conditions => ["number LIKE ?", '401%']).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Aucun--"} 
+  - f.field :entity, :supplier_account_id, :choices=>@current_company.accounts.find(:all, :conditions => ["number LIKE ?", '400%']).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Créer automatiquement un compte fournisseur--"} 
 
 =formalize(:id=>:client_form) do |f|
   - f.title :client
-  - f.field :entity, :client_account_id, :choices=>@current_company.accounts.find(:all, :conditions => ["number LIKE ?", '411%']).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Aucun--"} 
+  - f.field :entity, :client_account_id, :choices=>@current_company.accounts.find(:all, :conditions => ["number LIKE ?", '410%']).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Créer automatiquement un compte client--"} 
   - f.field :entity, :category_id, :choices=>@current_company.entity_categories.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
   - f.field :entity, :origin_id, :choices=>@current_company.meeting_locations.find(:all, :conditions=>{:active=>true}).collect{|x| [x.name, x.id]}, :options=>{:include_blank=>tc('no_origin')}
   - f.field :entity, :first_met_on
@@ -42,13 +42,14 @@
 
 :javascript
   function displayFields(){
-    if ($('entity_client').checked)
-      $('client_form').show();     
-    else
+    if ($('entity_client').checked) {
+      $('client_form').show(); $('supplier_form').hide();      
+    } else
       $('client_form').hide(); 
-    if ($('entity_supplier').checked)
-      $('supplier_form').show();     
-    else
+
+    if ($('entity_supplier').checked) {
+      $('supplier_form').show(); $('client_form').hide();      
+    } else
       $('supplier_form').hide(); 
   }
   displayFields();
