--- a/app/views/relations/entities_import.html.haml
+++ b/app/views/relations/entities_import.html.haml
@@ -1,3 +1,7 @@
+= aclist do |l|
+  - l.action :entities_export
+  
+
 -if !@unavailable_entities.nil?
   -if !@unavailable_entities.empty?
     .errorExplanation
