--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -22,11 +22,11 @@
 
 =formalize(:id=>:supplier_form) do |f|
   - f.title :supplier
-  - f.field :entity, :supplier_account_id, :choices=>@current_company.accounts.find(:all, :conditions => ["number LIKE ?", '400%']).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Créer automatiquement un compte fournisseur--"} 
+  - f.field :entity, :supplier_account_id, :choices=>@supplier_accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Créer automatiquement un compte fournisseur--"} 
 
 =formalize(:id=>:client_form) do |f|
   - f.title :client
-  - f.field :entity, :client_account_id, :choices=>@current_company.accounts.find(:all, :conditions => ["number LIKE ?", '410%']).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Créer automatiquement un compte client--"} 
+  - f.field :entity, :client_account_id, :choices=>@client_accounts.collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}, :options=>{:include_blank=>"--Créer automatiquement un compte client--"} 
   - f.field :entity, :category_id, :choices=>@current_company.entity_categories.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
   - f.field :entity, :origin_id, :choices=>@current_company.meeting_locations.find(:all, :conditions=>{:active=>true}).collect{|x| [x.name, x.id]}, :options=>{:include_blank=>tc('no_origin')}
   - f.field :entity, :first_met_on
@@ -53,7 +53,7 @@
       $('supplier_form').hide(); 
   }
   displayFields();
-  $('supplier_form').hide();
+  
 
 =observe_field "entity_client", :function=>"displayFields();", :frequency => 0.25
 =observe_field "entity_supplier", :function=>"displayFields();", :frequency => 0.25
