git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@775 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -62,6 +62,8 @@
     = link_to tc('sales_new'), {:controller=>:management, :action=>:sales_new, :client_id=>@entity.id}, :class=>'procedure create'
   -if @sale_orders_number > 0
     =dyta :entity_sales
+  %h2= tc(:invoices, :count=>@invoices_count)
+  =dyta(:client_invoices)
   -if @entity.client
     %h2=tc('client_balance')+" : "+@entity.balance.to_s
   %h2=tc :meetings, :count=>@meetings_count
