--- a/app/views/company/_users_form.html.haml
+++ b/app/views/company/_users_form.html.haml
@@ -7,6 +7,8 @@
   -f.field :user, :name
   -f.field :user, :password
   -f.field :user, :password_confirmation
+  -f.title :rights
   -f.field :user, :role_id, :choices=>@current_company.roles.find(:all, :order=>:name).collect{|x| [x.name, x.id]}
   -f.field :user, :reduction_percent
   -f.field :user, :free_price
+  -f.field :user, :credits
