--- a/app/views/accountancy/statements_display.html.haml
+++ b/app/views/accountancy/statements_display.html.haml
@@ -5,5 +5,5 @@
 =evalue(@bank_account_statement.bank_account, :name)
 =evalue(@bank_account_statement, :credit)
 =evalue(@bank_account_statement, :debit)
-=dyta(:entries)
+=dyta(:entries_statement)
 
