git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@779 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/invoices_cancel.html.haml
+++ b/app/views/management/invoices_cancel.html.haml
@@ -29,7 +29,7 @@
           %td= @line.quantity
         -else
           %td= @line.quantity.to_f*-1
-        %td= text_field_tag "invoice_cancel_line[#{@line.origin_id}][quantity]", (@line.origin.quantity - (@line.quantity*-1) ), :id=>"invoice_cancel_line_#{@line.origin_id}_quantity"
+        %td= text_field_tag "invoice_cancel_line[#{@line.origin_id}][quantity]", (@line.origin.quantity - (@line.quantity*-1) ).abs, :id=>"invoice_cancel_line_#{@line.origin_id}_quantity"
 
   .actions
     =link_to tg(:previous), :action=>:invoices
