--- a/app/views/management/_payments_form.html.haml
+++ b/app/views/management/_payments_form.html.haml
@@ -9,6 +9,7 @@
   -f.title :title
   -f.field :payment, :amount
   -f.field :payment, :paid_on
+  -f.field :payment, :to_bank_on
   -f.field :payment, :mode_id, :choices=>PaymentMode.find(:all,:conditions=>{:company_id=>@current_company.id}).collect{|x| [x.name, x.id ]}, :new=>{:action=>:payment_modes_create}
   -f.title :check
   -f.field :payment, :check_number
