--- a/app/views/accountancy/accounts_letter.html.haml
+++ b/app/views/accountancy/accounts_letter.html.haml
@@ -10,13 +10,16 @@
   - if @entries
     - @entries.each do |entry|
       - attr = cycle("even", "odd")
-      %tr{:class => (not entry.letter.empty? ? ("letter"+" "+(   ? "" : "unbalanced")) : "")+" "+attr, :id=> 'e'+entry.id.to_s}
+      =hidden_field_tag 'prefix_class_'+entry.id.to_s, ' '
+      %tr{:class => ((entry.balanced_letter?.is_a? FalseClass) ? "unbalanced" : "")+" "+attr, :id=> 'e'+entry.id.to_s}
         %td=I18n.localize(entry.record.created_on)
         %td=entry.record.journal.name
         %td=entry.name
         %td=entry.record.number
         %td.decimal=entry.debit
         %td.decimal=entry.credit
-        %td{ :id => 'entry_letter_'+entry.id.to_s, :onclick => remote_function(:after => "var element=$('e"+entry.id.to_s+"'); if (element.hasClassName('unletterabled"+attr+"')) { element.removeClassName('unletterabled "+attr+"'); element.addClassName('letterabled"+attr+"'); } else if (element.hasClassName('letterabled"+attr+"')) { element.removeClassName('letterabled"+attr+"'); element.addClassName('unletterabled"+attr+"');}", :url => { :action => 'entries_letter', :id => entry.id })}=entry.letter    
+        %td{:id => 'entry_letter_'+entry.id.to_s, :onclick => remote_function(:zafter => "$('e"+entry.id.to_s+"').className='$(\').innerHTML'"+attr, :url => { :action => 'entries_letter', :id => entry.id })}=entry.letter    
+      =#javascript_tag("$('e"+entry.id.to_s+"').className='$(\'prefix_class_"+entry.id.to_s+"\').innerHTML"+" "+attr+"'") 
 %br  
 #lettering=render :partial => 'accounts_letter'
+
