--- a/app/views/accountancy/_bank_accounts_form.html.haml
+++ b/app/views/accountancy/_bank_accounts_form.html.haml
@@ -11,6 +11,8 @@
 =formalize(:id=>:iban) do |f|  
   - f.field :bank_account, :iban
   - f.field :bank_account, :bic
+=formalize do |f|
+  - f.field :bank_account, :address, :field=>:textarea
 =formalize do |f|  
   - f.title :accountancy
   - f.field :bank_account, :account_id,  :choices => @current_company.accounts.find(:all, :conditions=>['number ilike ?','51%'], :order=>:number).collect {|b| [b.label, b.id]}, :new => {:action => :accounts_create}
