git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@804 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_bank_accounts_form.html.haml
+++ b/app/views/accountancy/_bank_accounts_form.html.haml
@@ -2,6 +2,7 @@
   - f.error :bank_account
   - f.title :rib
   - f.field :bank_account, :name
+  - f.field :bank_account, :bank_name
   - f.field :bank_account, :mode, :field=>:radio, :choices=>BankAccount.modes  
 =formalize(:id=>:bban) do |f|
   - f.field :bank_account, :bank_code  
