--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     %link{:rel=>"icon", :type=>"image/png", :href=>"/images/favicon.png"}
     %title='Ekylibre - '+t("controllers.#{controller.controller_name.to_s}.title")
     = stylesheet_link_tag 'application'
+    = stylesheet_link_tag 'print', :media=>'print'
     = javascript_include_tag :defaults
   %body{:id=>:body, :orient=>:vertical, :onload=>'initTab(); resize();', :onresize=>'resize();'}
     = top_tag
