--- a/app/views/management/_sale_order_lines_form.html.haml
+++ b/app/views/management/_sale_order_lines_form.html.haml
@@ -1,7 +1,7 @@
 = formalize do |f|
   - f.error :sale_order_line
   - f.title :infos
-  - f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:prices_create, :mode=>:sales}
+  - f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:prices_create, :mode=>:sales}
   - f.field :sale_order_line, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]} if @stock_locations.size > 1
   - f.field :sale_order_line, :quantity
 -if @current_user.free_price
