--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -323,10 +323,12 @@ table.dyta tr.total{background:#D28830;}
 table.dyta tr.total td{color:RED;font-family:monospace;}
 
 /* lettering */
+table.dyta tr.even td{background: #FFCCCC;}
+table.dyta tr.odd  td{background: #FF9999;}
 table.dyta tr.letter.even td{background:#CCF5CC;}
 table.dyta tr.letter.odd  td{background:#99EB99;}
-table.dyta tr.letter.unbalanced.even td{background: #FFCCCC;}
-table.dyta tr.letter.unbalanced.odd  td{background: #FF9999;}
+table.dyta tr.letter-unbalanced.even td{background: #F9DBCC;}
+table.dyta tr.letter-unbalanced.odd  td{background: #F9CC99;}
 
 /* undelivered sales  */
 table.dyta tr.odd.advance td{background:#c8ffa0; }
