--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html;charset=UTF-8'}
     %link{:rel=>"icon", :type=>"image/png", :href=>"/images/favicon.png"}
     %title='Ekylibre - '+t("controllers.#{controller.controller_name.to_s}.title")
-    = stylesheet_link_tag 'application'
+    = stylesheet_link_tag 'application', 'dyta'
     = stylesheet_link_tag 'print', :media=>'print'
     = javascript_include_tag :defaults
   %body{:id=>:body, :orient=>:vertical, :onload=>'initTab(); resize();', :onresize=>'resize();'}
