git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@830 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -11,6 +11,10 @@
 
 %h2= tc :users
 =dyta :users
+%h2= tc(:roles)
+.aclist
+  =link_to tc('roles_create'), {:action=>:roles_create}, :class=>'procedure create'
+=dyta :roles
 %h2= tc :establishments
 =dyta :establishments
 %h2= tc :departments
