--- a/app/views/company/roles_create.html.haml
+++ b/app/views/company/roles_create.html.haml
@@ -11,6 +11,10 @@
           =t(('rights.'+right_name.to_s).to_sym)
           =check_box_tag "right[#{right_name}]", "#{right_name}", false, :id=>"right_#{right_name}"
 
+      =formalize do |f|
+        - f.title tc((right[0].to_s+"_rights").to_sym)
+        - for right_name in right[1]
+          - f.field t(('rights.'+right_name.to_s).to_sym), check_box_tag("right[#{right_name}]", "#{right_name}", false, :id=>"right_#{right_name}")
   .actions
     =link_to tg(:previous), :action=>:index
     =submit_tag(tc('validate'), :action=>:roles_create)
