--- a/app/views/company/roles_create.html.haml
+++ b/app/views/company/roles_create.html.haml
@@ -1,20 +1,14 @@
-=formalize do |f|
-  - f.error :role
-  - f.title :role_name
-  - f.field :role, :name
-- form_tag do
+-form_tag do 
+  =formalize do |f|
+    - f.error :role
+    - f.title :role_name
+    - f.field :role, :name
   - if !@rights.nil?
     - for right in @rights
-      %p.right-category=tc((right[0].to_s+"_rights").to_sym)
-      - for right_name in right[1]
-        %p.right
-          =t(('rights.'+right_name.to_s).to_sym)
-          =check_box_tag "right[#{right_name}]", "#{right_name}", false, :id=>"right_#{right_name}"
-
       =formalize do |f|
         - f.title tc((right[0].to_s+"_rights").to_sym)
         - for right_name in right[1]
-          - f.field t(('rights.'+right_name.to_s).to_sym), check_box_tag("right[#{right_name}]", "#{right_name}", false, :id=>"right_#{right_name}")
+          - f.field t(('rights.'+right_name.to_s).to_sym), check_box_tag("right[#{right_name}]", "#{right_name}", true, :id=>"right_#{right_name}")
   .actions
     =link_to tg(:previous), :action=>:index
     =submit_tag(tc('validate'), :action=>:roles_create)
