git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@842 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -1,4 +1,4 @@
-- if @valid
+*- if @valid
   %h1=tc(:subtitle, :journal=>@journal.name, :financialyear=>@financialyear.code)
 - if @valid
   #update_params.aclist
