git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@846 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_users_form.html.haml
+++ b/app/views/company/_users_form.html.haml
@@ -13,4 +13,4 @@
   -#f.field :user, :reduction_percent
   -#f.field :user, :free_price
   -#f.field :user, :credits
-=render :partial=>"roles_form"
+%div#rights=render :partial=>"roles_form"
